# brine

./: .gitignore  .gitmodules  Cargo.toml  README.md
containers/decompile/: Dockerfile  README.md  decompile-client.sh
containers/decompile/scripts/: decompile-and-copy.sh
containers/minecraft-server/: docker-compose.yml
crates/: README.md
crates/brine_asset/: Cargo.toml  README.md
crates/brine_asset/examples/: bakery.rs  bakery_v2.rs  basic.rs
crates/brine_asset/src/: blocks.rs  hash_slab.rs  lib.rs  textures.rs
crates/brine_asset/src/api/: blocks.rs  mod.rs  models.rs  textures.rs
crates/brine_asset/src/bakery/: bake.rs  block_states.rs  mod.rs  models.rs  textures.rs  unresolved_models.rs
crates/brine_asset/src/bakery/block_states/: baked.rs  block_states_bakery.rs  half_baked.rs  model_cache.rs
crates/brine_asset/src/bakery/models/: baked.rs  cuboid_bakery.rs  cuboid_math.rs  mod.rs  model_bakery.rs  resolved.rs  unbaked.rs  unresolved.rs
crates/brine_asset/src/bakery_v2/: bake.rs  baked.rs  mod.rs  model_bakery.rs
crates/brine_asset/src/bakery_v2/block_states/: baked.rs  block_states_bakery.rs  half_baked.rs  mod.rs  model_cache.rs  unbaked.rs
crates/brine_asset/src/bakery_v2/models/: baked.rs  cuboid_bakery.rs  cuboid_math.rs  mod.rs  model_bakery.rs  unbaked.rs
crates/brine_asset/src/hash_slab/: hash_slab.rs  mod.rs  usize_key.rs
crates/brine_asset/src/models/: mod.rs  model.rs  model_table.rs  unresolved.rs
crates/brine_asset/src/storage/: block_state_table.rs  cuboid_table.rs  mod.rs  model_table.rs  quad_table.rs  texture_table.rs
crates/brine_chunk/: Cargo.toml  README.md
crates/brine_chunk/src/: lib.rs  palette.rs
crates/brine_chunk/src/decode/: mod.rs  packed_vec.rs  varint.rs
crates/brine_data/: Cargo.toml  README.md
crates/brine_data/src/: block.rs  blocks.rs  data.rs  lib.rs  version.rs
crates/brine_data/src/blocks/: block.rs  mod.rs  state.rs
crates/brine_net/: Cargo.toml  README.md
crates/brine_net/examples/: basic.rs  dummy.rs  strings.rs
crates/brine_net/src/: connection.rs  event.rs  lib.rs  plugin.rs  resource.rs  system_param.rs
crates/brine_net/src/codec/: dummy.rs  mod.rs  string.rs
crates/brine_proto/: Cargo.toml  README.md
crates/brine_proto/src/: event.rs  lib.rs
crates/brine_proto/src/plugin/: mod.rs  protocol.rs  successful_login.rs
crates/brine_proto_backend/: Cargo.toml
crates/brine_proto_backend/src/: codec.rs  lib.rs  plugin.rs  version.rs
crates/brine_proto_backend/src/backend_minecraft_protocol/: convert.rs  login.rs  mod.rs
crates/brine_proto_backend/src/backend_minecraft_protocol/codec/: decode.rs  encode.rs  mod.rs
crates/brine_proto_backend/src/backend_stevenarella/: chunks.rs  codec.rs  login.rs  mod.rs
crates/brine_proto_backend/src/codec/: mod.rs
crates/brine_proto_backend/src/codec/impl/: decode.rs  encode.rs  mod.rs
crates/brine_proto_backend/src/impl/: convert.rs  login.rs  mod.rs
crates/brine_proto_backend/src/impl/codec/: mod.rs
crates/brine_proto_backend/src/system/: login.rs  mod.rs
crates/brine_proto_backend/test/: README.md  packet-data
crates/brine_render/: Cargo.toml
crates/brine_render/examples/: bake_chunk.rs  minecraft_textures.rs  texture_atlas.rs
crates/brine_render/src/: lib.rs
crates/brine_render/src/chunk/: bakery.rs  chunk_bakery.rs  mod.rs
crates/brine_render/src/chunk/meshing_view/: chunk_view.rs  mod.rs
crates/brine_render/src/texture/: atlas.rs  manager.rs  mc_textures.rs  mod.rs  plugin.rs
crates/brine_voxel/: Cargo.toml  README.md
crates/brine_voxel/examples/: mesher.rs  texture_builder.rs
crates/brine_voxel/examples/common/: mesh_viewer.rs  mod.rs
crates/brine_voxel/src/: axis.rs  direction.rs  lib.rs  mesh.rs  texture.rs  view.rs
crates/brine_voxel/src/chunk_builder/: block_mesh.rs  component.rs  mod.rs  naive_blocks.rs  plugin.rs  visible_faces.rs
crates/brine_voxel/src/cuboid/: axis_aligned.rs  cuboid.rs  mod.rs  transform.rs
crates/brine_voxel/src/meshing/: mesh.rs  mesher.rs  meshing_view.rs  mod.rs  simple.rs
crates/brine_voxel_v1/: Cargo.toml
crates/brine_voxel_v1/examples/: texture_builder.rs
crates/brine_voxel_v1/src/: mesh.rs
crates/brine_voxel_v1/src/chunk_builder/: block_mesh.rs  mod.rs  plugin.rs
src/: chunk.rs  error.rs  lib.rs  login.rs  main.rs  server.rs
src/debug/: mod.rs  wireframe.rs
