[package]
name = "brine"
version = "0.0.1"
edition = "2021"

[workspace]
resolver = "2"
members = [
    '.',
    './crates/brine_net',
    './crates/brine_proto',
    './crates/brine_proto_backend',
    './third_party/stevenarella/protocol',
]

[dependencies]
brine_proto = { path = "./crates/brine_proto" }
brine_proto_backend = { path = "./crates/brine_proto_backend", features = ["steven_proto"] }

bevy = { version = "0.6.0" }
