[package]
name = "brine"
version = "0.0.1"
edition = "2021"

[workspace]
resolver = "2"
members = [
    '.',
    './crates/brine_chunk',
    './crates/brine_net',
    './crates/brine_proto',
    './crates/brine_proto_backend',
    './third_party/stevenarella/protocol',
]

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
bevy = { version = "0.6.0" }
#block-mesh = "0.1"
clap = { version = "3", features = ["derive"] }
futures-lite = "1"

brine_chunk = { path = "./crates/brine_chunk" }
brine_net = { path = "./crates/brine_net" }
brine_proto = { path = "./crates/brine_proto" }
brine_proto_backend = { path = "./crates/brine_proto_backend" }
