[package]
name = "brine"
version = "0.0.1"
edition = "2021"
default-run = "brine"

[workspace]
resolver = "2"
members = [
    '.',
    './crates/*',
]

# Compile all dependencies (but no workspace members) with extra optimizations
# in debug mode (for a faster-running game with little to no recompilation cost).
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
bevy_fly_camera = "0.8"
bevy-inspector-egui = "0.7"
clap = { version = "3", features = ["derive"] }
futures-lite = "1"
serde = "1"
serde_json = "1"
steven_protocol = { path = "./third_party/stevenarella/protocol", default-features = false }
thiserror = "1"

brine_asset = { path = "./crates/brine_asset" }
brine_chunk = { path = "./crates/brine_chunk" }
brine_data = { path = "./crates/brine_data" }
brine_net = { path = "./crates/brine_net" }
brine_proto = { path = "./crates/brine_proto" }
brine_proto_backend = { path = "./crates/brine_proto_backend" }
brine_voxel = { path = "./crates/brine_voxel" }
brine_voxel_v1 = { path = "./crates/brine_voxel_v1" }
