[package]
name = "brine_net"
version = "0.0.0"
edition = "2021"

[dependencies]
async-channel = "1.6"
async-codec = "0.4"
async-net = "1.6"
bevy_app = "0.6"
bevy_ecs = "0.6"
bevy_log = "0.6"
bevy_tasks = "0.6"
byteorder = "1"
crossbeam-channel = "0.5"
futures = "0.3"
futures-lite = "1"
thiserror = "1"

[dev-dependencies]
bevy = "0.6"
