[package]
name = "brine_proto_backend"
version = "0.0.0"
edition = "2021"

[features]
# Uses the minecraft-protocol crate for the backend implementation.
minecraft_proto = []

# Uses the steven_protocol crate from stevenarella for the backend
# implementation.
steven_proto = []

# Use stevenarella by default
default = ["steven_proto"]

[dependencies]
bevy_app = "0.6"
bevy_ecs = "0.6"
bevy_log = "0.6"
minecraft-protocol = { git = "https://github.com/bgr360/minecraft-protocol", branch = "my-fork" }
pretty-hex = "0.2"
serde_json = "1"

brine_net = { path = "../brine_net" }
brine_proto = { path = "../brine_proto" }
steven_protocol = { path = "../../third_party/stevenarella/protocol" }

[dev-dependencies]
assert_matches = "1"
async-std = { version = "1", features = ["attributes"] }
async-codec = "0.4"
futures = "0.3"
uuid = "0.7" # should be 0.8 to match other crates, but minecraft-proto is behind
