[package]
name = "brine_proto_backend"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy_app = "0.6"
bevy_ecs = "0.6"
bevy_log = "0.6"
pretty-hex = "0.2"
serde_json = "1"

brine_chunk = { path = "../brine_chunk" }
brine_net = { path = "../brine_net" }
brine_proto = { path = "../brine_proto" }
steven_protocol = { path = "../../third_party/stevenarella/protocol", default-features = false }

[dev-dependencies]
assert_matches = "1"
async-std = { version = "1", features = ["attributes"] }
async-codec = "0.4"
futures = "0.3"
uuid = "0.7" # should be 0.8 to match other crates, but minecraft-proto is behind
