[package]
name = "brine_voxel"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.6" }

block-mesh = "0.1"
futures-lite = "1"

brine_chunk = { path = "../brine_chunk" }
brine_data = { path = "../brine_data" }
brine_proto = { path = "../brine_proto" }

[dev-dependencies]
minecraft-assets = { path = "../minecraft-assets-rs" }